// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deal address component renders with address 1`] = `
<div
  class="makeStyles-container-1"
  title=""
>
  <h6
    class="MuiTypography-root-15 MuiTypography-subtitle1-26"
  >
    <span
      class=""
      title=""
    >
      1200 Main St, Dallas, TX, 75202
    </span>
  </h6>
  <button
    class="MuiButtonBase-root-72 MuiButton-root-45 MuiButton-text-47 makeStyles-editButton-2 MuiButton-textSecondary-49 MuiButton-textSizeSmall-58 MuiButton-sizeSmall-64"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-46"
    >
      Edit
    </span>
  </button>
</div>
`;

exports[`Deal address component renders without address 1`] = `
<div
  class="makeStyles-container-73"
  title=""
>
  <h6
    class="MuiTypography-root-87 MuiTypography-subtitle1-98"
  >
    <span
      class=""
      title="Some title for a deal without address"
    >
      Some title for a... without address
    </span>
  </h6>
  <button
    class="MuiButtonBase-root-144 MuiButton-root-117 MuiButton-text-119 makeStyles-editButton-74 MuiButton-textSecondary-121 MuiButton-textSizeSmall-130 MuiButton-sizeSmall-136"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-118"
    >
      + Add Address
    </span>
  </button>
</div>
`;
